fixing overflow on code blocks

--- a/content/css/styles.css
+++ b/content/css/styles.css
@@ -12,6 +12,8 @@ article, aside, header {
 
 body { background-color: rgb(245, 245, 245); }
 
+pre code { word-wrap: normal; }
+
 header { margin: 0 auto .2em; max-width: 1024px; height: 100px; background-color: rgba(255, 255, 255, 0.7);}
 
 header hgroup { width: 90%; float: left; }
